--- a/pages/index.css
+++ b/pages/index.css
@@ -26,8 +26,7 @@
 
 /*____________LEAD______________*/
 @import url(../blocks/lead/__caption/lead__caption.css);
-@import url(../blocks/lead/__image/lead__image_graphic.css);
-@import url(../blocks/lead/__image/lead__image_kalegin-michail.css);
+@import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/lead.css);
@@ -37,5 +36,11 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 
 /*____________PLACES______________*/
-@import url(../blocks/places/__place/places__place.css);
 @import url(../blocks/places/places.css);
+
+/*____________PLACE______________*/
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__website-link/place__website-link.css);
+@import url(../blocks/place/__website-url/place__website-url.css);
