--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,14 @@
 .header__lang-link {
-  color: #ffffff;
   width: 22px;
   height: 20px;
-  margin-top: 30px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.1;
+  color: #ffffff;
+  margin: 14px 0 0 18px;
 }
+
+.header__lang-link:hover {
+  text-decoration: underline;
+}
+/* СДЕЛАТЬ :hover */
