--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,9 +6,19 @@
   line-height: 1.1;
   color: #ffffff;
   margin: 14px 0 0 18px;
+  text-decoration: none;
 }
 
 .header__lang-link:hover {
   text-decoration: underline;
 }
-/* СДЕЛАТЬ :hover */
+
+@media screen and (max-width: 768px) {
+  .header__lang-link {
+    width: 30px;
+    height: 28px;
+    margin: 18px 0 0 18px;
+    font-size: 24px;
+    line-height: 1.16;
+  }
+}
