--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,17 @@
   background-color: #2a2c2f;
   width: 320px;
   font-family: "Inter";
+  padding: 16px 16px 0 16px;
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+    padding: 28px 24px 0 24px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .page {
+    padding: 28px 48px 0 48px;
+  }
 }
