--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,6 +4,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1.25;
+  font-style: normal;
   color: #ffffff;
   text-align: center;
   margin-top: 16px;
