--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,5 @@
 .lead__image {
-  width: minmax(110%, 928px);
+  width: 110%;
   height: calc(width/1.6);
   margin-top: 40px;
 }
@@ -8,9 +8,14 @@
     margin-top: 56px;
   }
 }
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .lead__image {
     margin-top: 64px;
-    width: 984px;
   }
 }
