--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,17 +2,17 @@
   margin-top: 64px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .intro {
     margin-top: 88px;
   }
 }
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .intro {
     margin-top: 92px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .intro {
     margin: 92px 100px 0;
   }
