--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,3 +1,14 @@
 .intro__text {
-  max-width: 208px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 163%;
+  color: #ffffff;
+  margin: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .intro_text {
+    max-width: 690px;
+  }
 }
