--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,18 +3,18 @@
   height: calc(width/1.6);
   margin-top: 40px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .lead__image {
     margin-top: 56px;
   }
 }
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .lead__image {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .lead__image {
     margin-top: 64px;
   }
