--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,7 +9,7 @@
   color: #ffffff;
   margin: 0;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .lead__title {
     width: 720px;
     height: 200px;
