--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin-top: 48px;
 }
-@media screen and (max-width: 1028px) {
+@media screen and (min-width: 1028px) {
   .lead {
     margin: 56px 100px 0;
   }
