--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,17 +1,16 @@
 .page {
   background-color: #2a2c2f;
-  width: 320px;
   font-family: "Inter";
   padding: 16px 16px 0 16px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .page {
     padding: 28px 24px 0 24px;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .page {
     padding: 28px 48px 0 48px;
   }
