--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,8 +1,8 @@
 .photo-grid {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto, 1fr);
+  /* grid-auto-flow: row dense; */
+  gap: 10px;
   margin-top: 64px;
 }
 
@@ -16,3 +16,5 @@
     margin-top: 92px;
   }
 }
+
+/* minmax(1fr, 352px) */
