--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
 .photo-grid {
   display: grid;
-  grid-template-columns: repeat(auto, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   /* grid-auto-flow: row dense; */
   gap: 10px;
   margin-top: 64px;
