--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,14 @@
 .place__paragraph {
+  grid-area: place__paragrph;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 163%;
   color: #ffffff;
+}
+
+@media screen and (min-wight: 1024px) {
+  .place__paragraph {
+    font-size: 18px;
+  }
 }
