--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,21 @@
 .place__title {
+  grid-area: place__title;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 109%;
   color: #ffffff;
+}
+
+@media screen and (min-wigth: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 110%;
+  }
+}
+@media screen and (min-wigth: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 106%;
+  }
 }
