--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,4 @@
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__website-link/place__website-link.css);
 @import url(../blocks/place/__website-url/place__website-url.css);
+@import url(../blocks/place/place.css);
