--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,6 @@
 .place__image {
-  grid-area: place__image;
+  grid-row: 3;
+  grid-column: 1;
   object-fit: contain;
   width: 110%;
   max-width: 460px;
