--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,6 @@
 .place__title {
-  grid-area: place__title;
+  grid-row: 1/2;
+  grid-column: 1;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
