--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -1,5 +1,6 @@
 .place__website-url {
-  grid-area: place__website-url;
+  grid-row: 1;
+  grid-column: 2;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -7,7 +8,7 @@
   letter-spacing: 2px;
   color: #aaaaaa;
   text-decoration: none;
-  margin-bottom: 12px;
+  margin: 0;
 }
 
 .place__website-url:hover {
