--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,5 @@
 .place {
   display: grid;
-  grid-template-columns: 50% minmax(min-content, max-content);
-  grid-template-areas:
-    "place__title place__website-url"
-    "place__title place__website-link"
-    "place__image place__paragrph";
+
+  grid-template-columns: ;
 }
