--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,5 @@
 .place {
   display: grid;
-
-  grid-template-columns: ;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  align-items: center;
 }
