--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,13 @@
 .place__image {
-  grid-row: 3;
-  grid-column: 1;
   object-fit: contain;
-  width: 110%;
+  width: 100vw;
   max-width: 460px;
+  position: relative;
+  left: -16px;
+}
+@media screen and (min-width: 321px) {
+  .place__image {
+    width: 100%;
+    left: 0;
+  }
 }
