--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
-  grid-row: 3;
-  grid-column: 2;
+  /* grid-row: 3;
+  grid-column: 2; */
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -9,7 +9,7 @@
   margin: 0;
 }
 
-@media screen and (min-wight: 1024px) {
+@media screen and (min-width: 1024px) {
   .place__paragraph {
     font-size: 18px;
   }
