--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,22 +1,23 @@
 .place__title {
-  grid-row: 1/2;
-  grid-column: 1;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 109%;
   color: #ffffff;
+  max-width: 100%;
+  margin: 0 0 32px;
 }
 
-@media screen and (min-wigth: 768px) {
+@media screen and (min-width: 768px) {
   .place__title {
     font-size: 42px;
     line-height: 110%;
   }
 }
-@media screen and (min-wigth: 1024px) {
+@media screen and (min-width: 1024px) {
   .place__title {
     font-size: 72px;
     line-height: 106%;
+    margin: 0 0 32px;
   }
 }
