--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -1,6 +1,4 @@
 .place__website-url {
-  grid-row: 1;
-  grid-column: 2;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -15,7 +13,7 @@
   text-decoration: underline;
 }
 
-@media screen and (min-wight: 1024px) {
+@media screen and (min-width: 1024px) {
   .place__website-url {
     line-height: 170%;
   }
