--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,2 +1,20 @@
 .places {
+  margin-top: 64px;
+}
+
+@media screen and (min-width: 768px) {
+  .places {
+    margin-top: 88px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .places {
+    margin-top: 92px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .places {
+    margin: 92px 100px 0;
+  }
 }
