--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,3 +3,7 @@
 подложек под текстом, например в блоке cover .
 Изображение затемняется при наведении на любую область блока cover , в том числе и на текстовые
 элементы. Наведение реализовано через :hover . */
+.cover {
+  position: relative;
+  margin-top: 66px;
+}
