--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,18 +6,26 @@
   color: #ffffff;
   max-width: 100%;
   margin: 0 0 32px;
+  word-wrap: break-word;
 }
 
 @media screen and (min-width: 768px) {
   .place__title {
     font-size: 42px;
     line-height: 110%;
+    margin: 0 0 28px;
   }
 }
 @media screen and (min-width: 1024px) {
   .place__title {
     font-size: 72px;
     line-height: 106%;
-    margin: 0 0 32px;
+    margin: 0 0 16px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .place__title {
+    margin: 0 0 8px;
   }
 }
