--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -6,9 +6,21 @@
   text-decoration-line: underline;
   color: #ffffff;
   margin: 12px 0 32px;
+  width: 100%;
+  height: 100%;
 }
 @media screen and (min-width: 768px) {
   .place__website-link {
-    margin: 12px 0 48px;
+    margin: 12px 0 28px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .place__website-link {
+    margin: 12px 0 16px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .place__website-link {
+    margin: 12px 0 8px;
   }
 }
