--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -7,6 +7,10 @@
   color: #aaaaaa;
   text-decoration: none;
   margin: 0;
+  text-align: left;
+  vertical-align: text-bottom;
+  width: 100%;
+  height: 70%;
 }
 
 .place__website-url:hover {
