--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,25 @@
 .place {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
+  align-items: strat;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .place {
+    margin-top: 72px;
+    gap: 28px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .place {
+    margin-top: 80px;
+    gap: 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .place {
+    gap: 40px;
+  }
 }
