--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,12 @@
 .cover__overlay {
   background: #2a2c2f;
   opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: calc(100vw / 1.6);
+  z-index: 2;
 }
 
 .cover__overlay:hover {
