--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,7 +10,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .cover__subtitle {
+  .cover__title {
     font-size: 72px;
     line-height: 106%;
   }
