--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -1,4 +1,6 @@
 .place__website-url {
+  grid-column: 2;
+  grid-row: 1;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -7,10 +9,6 @@
   color: #aaaaaa;
   text-decoration: none;
   margin: 0;
-  text-align: left;
-  vertical-align: text-bottom;
-  width: 100%;
-  height: 70%;
 }
 
 .place__website-url:hover {
