--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,3 @@
-/* Абсолютное позиционирование используется только там, где нельзя реализовать статичным или
-относительным позиционированием. Абсолютное позиционирование допустимо использовать для фоновых
-подложек под текстом, например в блоке cover .
-Изображение затемняется при наведении на любую область блока cover , в том числе и на текстовые
-элементы. Наведение реализовано через :hover . */
 .cover {
   display: flex;
   flex-direction: column;
@@ -13,4 +8,16 @@
   align-self: center;
   width: 100vw;
   height: calc(100vw / 1.6);
+}
+
+@media screen and (min-width: 768px) {
+  .cover {
+    margin-top: 90px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover {
+    margin-top: 92px;
+  }
 }
