--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,7 @@
   color: #ffffff;
   text-decoration: none;
   margin-right: 18px;
+  margin-top: 32px;
 }
 
 .footer__link:hover {
@@ -16,5 +17,6 @@
   .footer__link {
     font-size: 16px;
     line-height: 1.12;
+    margin-top: 0;
   }
 }
