--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: 64px;
+  margin-top: 32px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -7,6 +7,12 @@
 
 @media screen and (min-width: 768px) {
   .footer {
+    margin-top: 88px;
     flex-direction: row;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .footer {
+    margin-top: 92px;
   }
 }
