--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,11 +8,13 @@
 }
 @media screen and (min-width: 768px) {
   .intro__title {
-    margin: 88px 0 40px;
+    margin: 0 0 40px;
+    font-size: 54px;
+    line-height: 107%;
   }
 }
 @media screen and (min-width: 1024px) {
   .intro__title {
-    margin-top: 92px 0 40px;
+    margin-top: 0 0 40px;
   }
 }
