--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,16 +1,26 @@
 .place__paragraph {
-  grid-column: 2;
-  grid-row: 3;
+  grid-column: 1;
+  grid-row: 6;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 163%;
   color: #ffffff;
-  margin: 0;
+  margin: 32px 0 0;
+  padding-right: 32px;
 }
 
 @media screen and (min-width: 1024px) {
   .place__paragraph {
     font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .place__paragraph {
+    grid-column: 2;
+    grid-row: 3;
+    padding-right: 0;
+    margin: 0 0 0;
   }
 }
