--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -1,6 +1,6 @@
 .place__website-url {
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 1;
+  grid-row: 3;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -8,11 +8,18 @@
   letter-spacing: 2px;
   color: #aaaaaa;
   text-decoration: none;
-  margin: 0;
+  margin: 32px 0 12px;
 }
 
 .place__website-url:hover {
   text-decoration: underline;
+}
+@media screen and (min-width: 768px) {
+  .place__website-url {
+    grid-column: 2;
+    grid-row: 1;
+    margin: 0 0 12px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
