--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   background-color: #2a2c2f;
   font-family: "Inter";
   padding: 16px 16px 0 16px;
+  max-width: 1280px;
 }
 
 @media screen and (min-width: 768px) {
