--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,13 +7,13 @@
   font-style: normal;
   color: #ffffff;
   text-align: center;
-  margin-top: 16px;
+  margin: 16px 0 0;
 }
 @media screen and (min-width: 768px) {
   .lead__subtitle {
     width: 640px;
     height: 72px;
-    margin-top: 32px;
+    margin: 32px 0 0;
     font-size: 30px;
     line-height: 120%;
   }
