--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,18 +2,18 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 12px;
-  margin-top: 64px;
+  margin: 64px 0 0;
 }
 
 @media screen and (min-width: 768px) {
   .photo-grid {
-    margin-top: 88px;
+    margin: 88px 0 0;
     gap: 16px;
   }
 }
 @media screen and (min-width: 1024px) {
   .photo-grid {
-    margin-top: 92px;
+    margin: 92px 0 0;
     gap: 14px;
   }
 }
