--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
   grid-column: 1;
-  grid-row: 6;
+  grid-row: 4;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -8,19 +8,21 @@
   color: #ffffff;
   margin: 32px 0 0;
   padding-right: 32px;
-}
-
-@media screen and (min-width: 1024px) {
-  .place__paragraph {
-    font-size: 18px;
-  }
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 @media screen and (min-width: 768px) {
   .place__paragraph {
     grid-column: 2;
-    grid-row: 3;
+    grid-row: 2;
     padding-right: 0;
     margin: 0 0 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__paragraph {
+    font-size: 18px;
   }
 }
