--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,12 +1,14 @@
 .place__title {
   grid-column: 1;
-  grid-row: 1/2;
+  grid-row: 1;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 109%;
   color: #ffffff;
   margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 @media screen and (min-width: 768px) {
