--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -1,6 +1,4 @@
 .place__website-link {
-  grid-column: 1;
-  grid-row: 4;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -9,11 +7,5 @@
   color: #ffffff;
   width: 100%;
   height: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .place__website-link {
-    grid-column: 2;
-    grid-row: 2;
-  }
+  margin-top: 12px;
 }
