--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -1,6 +1,4 @@
 .place__website-url {
-  grid-column: 1;
-  grid-row: 3;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -8,18 +6,11 @@
   letter-spacing: 2px;
   color: #aaaaaa;
   text-decoration: none;
-  margin: 32px 0 12px;
+  margin: 0;
 }
 
 .place__website-url:hover {
   text-decoration: underline;
-}
-@media screen and (min-width: 768px) {
-  .place__website-url {
-    grid-column: 2;
-    grid-row: 1;
-    margin: 0 0 12px;
-  }
 }
 
 @media screen and (min-width: 1024px) {
