--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,23 +1,25 @@
 .place {
   display: grid;
-  margin-top: 50px;
+  margin-top: 64px;
 }
 
 @media screen and (min-width: 768px) {
   .place {
-    margin-top: 72px;
-    gap: 28px;
+    margin-top: 88px;
+    column-gap: 28px;
+    row-gap: 48px;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media screen and (min-width: 1024px) {
   .place {
     margin-top: 80px;
-    gap: 32px;
+    column-gap: 32px;
   }
 }
 @media screen and (min-width: 1280px) {
   .place {
-    gap: 40px;
+    margin-top: 92px;
+    column-gap: 40px;
   }
 }
