--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,20 +1,5 @@
-.places {
-  margin-top: 14px;
-}
-
-@media screen and (min-width: 768px) {
-  .places {
-    margin-top: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .places {
-    margin-top: 12px;
-  }
-}
 @media screen and (min-width: 1280px) {
   .places {
-    margin: 12px 100px 0;
+    margin: 0 100px 0;
   }
 }
