--- a/pages/index.css
+++ b/pages/index.css
@@ -46,3 +46,4 @@
 @import url(../blocks/place/__website-link/place__website-link.css);
 @import url(../blocks/place/__website-url/place__website-url.css);
 @import url(../blocks/place/place.css);
+@import url(../blocks/place/__url_link/place__url_link.css);
