--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,8 +8,10 @@
   color: #ffffff;
   margin: 32px 0 0;
   padding-right: 32px;
-  margin-block-start: 0;
-  margin-block-end: 0;
+}
+
+.place__paragraph > p:last-child {
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
