--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,12 +6,13 @@
   text-align: center;
   color: #ffffff;
   z-index: 3;
-  margin: 0;
+  margin: 16px 0 0;
 }
 
 @media screen and (min-width: 768px) {
   .cover__subtitle {
     font-size: 18px;
     line-height: 122%;
+    margin: 32px 0 0;
   }
 }
