--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -9,8 +9,18 @@
 }
 @media screen and (min-width: 768px) {
   .place__image {
-    width: 100%;
     left: 0;
     grid-row: 2;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__image {
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .place__image {
   }
 }
