--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,18 +8,20 @@
     margin-top: 73px;
     column-gap: 28px;
     row-gap: 48px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 340px auto;
   }
 }
 @media screen and (min-width: 1024px) {
   .place {
     margin-top: 80px;
     column-gap: 32px;
+    grid-template-columns: 440px auto;
   }
 }
 @media screen and (min-width: 1280px) {
   .place {
     margin-top: 92px;
     column-gap: 40px;
+    grid-template-columns: 480px auto;
   }
 }
