--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -10,8 +10,6 @@
 @media screen and (min-width: 768px) {
   .footer__copyright {
     margin: 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
+    justify-self: end;
   }
 }
