--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -5,3 +5,9 @@
   width: 100vw;
   z-index: 1;
 }
+
+@media screen and (min-width: 1280px) {
+  .cover__background {
+    max-width: 1232px;
+  }
+}
