--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,6 +7,8 @@
   color: #ffffff;
   z-index: 3;
   margin: 0;
+  text-decoration: none;
+  max-width: 560px;
 }
 
 @media screen and (min-width: 768px) {
