--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -10,6 +10,6 @@
 @media screen and (min-width: 768px) {
   .footer__copyright {
     margin: 0;
-    justify-self: end;
+    margin-left: auto;
   }
 }
