--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,12 +6,14 @@
   max-width: 460px;
   position: relative;
   left: -16px;
+  margin-top: 32px;
 }
 @media screen and (min-width: 768px) {
   .place__image {
     left: 0;
     grid-row: 2;
     width: 100%;
+    margin-top: 0;
   }
 }
 
