--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -6,7 +6,13 @@
   letter-spacing: 2px;
   color: #aaaaaa;
   text-decoration: none;
-  margin: 0 0 12px;
+  margin: 32px 0 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .place__website-url {
+    margin: 0 0 12px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
