--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,11 +3,12 @@
   top: 0;
   left: 0;
   width: 100vw;
+  height: calc(min(100vw, 1184px) / 1.6);
   z-index: 1;
 }
 
 @media screen and (min-width: 1280px) {
   .cover__background {
-    max-width: 1232px;
+    max-width: 1184px;
   }
 }
