--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,7 +7,7 @@
   margin-top: 66px;
   align-self: center;
   width: 100vw;
-  height: calc(100vw / 1.6);
+  height: calc(min(100vw, 1184px) / 1.6);
 }
 
 @media screen and (min-width: 768px) {
@@ -23,6 +23,6 @@
 }
 @media screen and (min-width: 1280px) {
   .cover {
-    max-width: 1232px;
+    max-width: 1184px;
   }
 }
