--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
 .lead__subtitle {
-  width: 288px;
-  height: 40px;
+  width: 100%;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.25;
@@ -11,8 +10,7 @@
 }
 @media screen and (min-width: 768px) {
   .lead__subtitle {
-    width: 640px;
-    height: 72px;
+    max-width: 640px;
     margin: 32px 0 0;
     font-size: 30px;
     line-height: 120%;
