--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,5 @@
 .lead__title {
-  width: 288px;
-  height: 88px;
+  width: 100%;
   font-style: normal;
   font-weight: 900;
   font-size: 40px;
@@ -8,11 +7,10 @@
   text-align: center;
   color: #ffffff;
   margin: 0;
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   .lead__title {
-    width: 720px;
-    height: 200px;
     font-size: 96px;
   }
 }
