--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,11 +1,12 @@
 .lead__image {
-  width: 100vw;
+  width: calc(100% + 16px * 2);
   margin-top: 40px;
 }
 
 @media screen and (min-width: 768px) {
   .lead__image {
     margin-top: 56px;
+    width: calc(100% + 24px * 2);
   }
 }
 
