--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -3,14 +3,26 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: calc(min(100vw, 1184px) / 1.6);
+  width: calc(100% + 16px * 2);
+  height: calc(min(calc(100% + 16px * 2), 1184px) / 1.6);
   opacity: 0.3;
   z-index: 2;
 }
 
 .cover__overlay:hover {
   opacity: 0.8;
+}
+@media screen and (min-width: 780px) {
+  .cover__overlay {
+    width: calc(100% + 24px * 2);
+    height: calc(min(calc(100% + 24px * 2), 1184px) / 1.6);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .cover__overlay {
+    width: calc(100% + 48px * 2);
+    height: calc(min(calc(100% + 48px * 2), 1184px) / 1.6);
+  }
 }
 
 @media screen and (min-width: 1280px) {
