--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -2,19 +2,9 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: calc(100% + 16px * 2);
-  height: calc(min(calc(100% + 16px * 2), 1184px) / 1.6);
+  width: 100%;
+  height: 100%;
   z-index: 1;
-}
-@media screen and (min-width: 768px) {
-  .cover__background {
-    width: calc(100% + 24px * 2);
-  }
-}
-@media screen and (min-width: 1024px) {
-  .cover__background {
-    width: calc(100% + 48px * 2);
-  }
 }
 
 @media screen and (min-width: 1280px) {
