--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,8 +7,9 @@
   line-height: 109%;
   color: #ffffff;
   margin: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  /* margin-block-start: 0;
+  margin-block-end: 0; */
+  justify-self: start;
 }
 
 @media screen and (min-width: 768px) {
