--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -11,3 +11,10 @@
   font-family: "Inter";
   font-weight: normal;
 }
+
+@font-face {
+  src: url(Inter-Bold.woff) format("woff"),
+    url(Inter-Bold.woff2) format("woff2");
+  font-family: "Inter";
+  font-weight: 700;
+}
