--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,7 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__figure/intro__figure.css);
 
 /*____________LEAD______________*/
 @import url(../blocks/lead/__caption/lead__caption.css);
