--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,4 +1,4 @@
-.cover__overlay {
+/* .cover__overlay {
   background: #2a2c2f;
   position: absolute;
   top: 0;
@@ -18,3 +18,5 @@
     max-width: 1184px;
   }
 }
+
+*/
