--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,6 @@
-.cover__background {
-  position: absolute;
-  top: 0;
-  left: 0;
+/* .cover__background {
+  background-image: url(./images/cover-trains.jpg);
   width: 100%;
-  height: 100%;
   z-index: 1;
 }
 
@@ -12,3 +9,4 @@
     max-width: 1184px;
   }
 }
+*/
