--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,5 @@
 .cover {
+  background-image: url(../../images/cover-trains.jpg);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,6 +10,22 @@
   width: calc(100% + 16px * 2);
   height: calc(min(100vw, 1184px) / 1.6);
 }
+
+.cover::before {
+  background: #2a2c2f;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  z-index: 1;
+  content: "";
+}
+.cover:hover::before {
+  opacity: 0.8;
+}
+
 @media screen and (min-width: 768px) {
   .cover {
     width: calc(100% + 24px * 2);
