--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
 
 /*____________FOOTER______________*/
 @import url(../blocks/footer/__copyright/footer__copyright.css);
