--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,6 @@
 .cover {
   background-image: url(../../images/cover-trains.jpg);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +9,7 @@
   margin-top: 66px;
   align-self: center;
   width: calc(100% + 16px * 2);
-  height: calc(min(100vw, 1184px) / 1.6);
+  padding: 33px 0;
 }
 
 .cover::before {
@@ -30,16 +31,19 @@
   .cover {
     width: calc(100% + 24px * 2);
     margin-top: 90px;
+    padding: 115px 0;
   }
 }
 @media screen and (min-width: 1024px) {
   .cover {
     width: calc(100% + 48px * 2);
     margin-top: 92px;
+    padding: 195px 0;
   }
 }
 @media screen and (min-width: 1280px) {
   .cover {
     max-width: 1184px;
+    padding: 245px 0;
   }
 }
