--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,4 @@
-.lang-links__lang-link {
+.header__lang-link {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.1;
@@ -6,12 +6,12 @@
   margin: 14px 0 0 18px;
   text-decoration: none;
 }
-.lang-links__lang-link:hover {
+.header__lang-link:hover {
   opacity: 0.8;
 }
 
 @media screen and (min-width: 768px) {
-  .lang-links__lang-link {
+  .header__lang-link {
     margin: 18px 0 0 18px;
     font-size: 24px;
     line-height: 1.16;
