--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #2a2c2f;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   margin: 16px 16px 24px 16px;
   max-width: calc(1280px - 96px);
 }
