--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,4 +4,23 @@
   align-items: center;
   text-decoration: none;
   z-index: 2;
+  padding: 33px 0;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .cover__link {
+    padding: 115px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__link {
+    padding: 195px 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .cover__link {
+    padding: 245px 0;
+  }
 }
