--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,7 +9,7 @@
 
 @media screen and (min-width: 768px) {
   .footer__copyright {
-    margin: 0;
+    margin-top: 0;
     margin-left: auto;
   }
 }
