--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,18 +1,17 @@
 .lead__image {
-  width: calc(100% + 16px * 2);
+  width: 100%;
   margin-top: 40px;
 }
 
 @media screen and (min-width: 768px) {
   .lead__image {
     margin-top: 56px;
-    width: calc(100% + 24px * 2);
   }
 }
 
 @media screen and (min-width: 1024px) {
   .lead__image {
-    width: 100%;
+    width: calc(100% - 48px * 2);
   }
 }
 
