--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,7 +3,7 @@
   grid-row: 3;
   object-fit: contain;
   max-width: 460px;
-  width: calc(100% + 16px * 2);
+  width: 100%;
   margin-top: 32px;
 }
 @media screen and (min-width: 768px) {
@@ -11,5 +11,12 @@
     grid-row: 2;
     width: 100%;
     margin-top: 0;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__image {
+    margin-left: 48px;
   }
 }
