--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,12 +13,13 @@
   .place__paragraph {
     grid-column: 2;
     grid-row: 2;
-    margin: 0 0 0;
+    margin: 0 24px 0 0;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .place__paragraph {
     font-size: 18px;
+    margin: 0 48px 0 0;
   }
 }
