--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -5,8 +5,21 @@
   line-height: 122%;
   color: #ffffff;
   text-decoration: underline;
+  margin: 0 16px;
 }
 
 .place__website-link:hover {
   opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
+  .place__website-link {
+    margin: 0 24px 0 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__website-link {
+    margin: 0 48px 0 0;
+  }
 }
