--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,7 +4,7 @@
   font-size: 14px;
   line-height: 100%;
   color: #ffffff;
-  margin-top: 48px;
+  margin: 48px 0 0;
 }
 
 @media screen and (min-width: 768px) {
