--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,7 +6,7 @@
   font-size: 16px;
   line-height: 163%;
   color: #ffffff;
-  margin: 32px 0 0;
+  margin: 32px 16px 0;
 }
 
 @media screen and (min-width: 768px) {
