--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -4,6 +4,7 @@
   font-size: 12px;
   line-height: 100%;
   letter-spacing: 2px;
+  text-transform: uppercase;
   color: #aaaaaa;
   text-decoration: none;
   margin: 32px 16px 12px;
