--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,7 +2,7 @@
   src: url(Inter-Black.woff) format("woff"),
     url(Inter-Black.woff2) format("woff2");
   font-family: "Inter";
-  font-weight: bold;
+  font-weight: 900;
 }
 
 @font-face {
