--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,7 +9,6 @@
 
 @media screen and (min-width: 768px) {
   .footer__copyright {
-    margin-top: 0;
-    margin-left: auto;
+    margin: 0 0 0 auto;
   }
 }
