--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,6 +13,10 @@
   opacity: 0.8;
 }
 
+.footer__link:last-child {
+  margin-right: 0;
+}
+
 @media screen and (min-width: 768px) {
   .footer__link {
     font-size: 16px;
