--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -11,12 +11,12 @@
     grid-row: 2;
     width: 100%;
     margin-top: 0;
-    margin-left: 24px;
+    padding-left: 24px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .place__image {
-    margin-left: 48px;
+    padding-left: 48px;
   }
 }
