--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,20 +6,22 @@
   font-size: 16px;
   line-height: 163%;
   color: #ffffff;
-  margin: 32px 16px 0;
+  margin-top: 32px;
+  padding: 0 16px;
 }
 
 @media screen and (min-width: 768px) {
   .place__paragraph {
     grid-column: 2;
     grid-row: 2;
-    margin: 0 24px 0 0;
+    margin-top: 0;
+    padding: 0 24px 0 0;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .place__paragraph {
     font-size: 18px;
-    margin: 0 48px 0 0;
+    padding: 0 48px 0 0;
   }
 }
