--- a/blocks/place/__website-url/place__website-url.css
+++ b/blocks/place/__website-url/place__website-url.css
@@ -7,18 +7,20 @@
   text-transform: uppercase;
   color: #aaaaaa;
   text-decoration: none;
-  margin: 32px 16px 12px;
+  margin: 32px 0 12px;
+  padding: 0 16px;
 }
 
 @media screen and (min-width: 768px) {
   .place__website-url {
-    margin: 0 24px 12px 0;
+    margin: 0 0 12px 0;
+    padding: 0 24px 0 0;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .place__website-url {
     line-height: 170%;
-    margin: 0 48px 12px 0;
+    padding: 0 48px 0 0;
   }
 }
